// ユーザーログインボーナス
syntax = "proto3";

package proto;

option go_package = "api/game/presentation/server/loginBonus";

import "google/protobuf/timestamp.proto";

message UserLoginBonus {
  string user_id = 1;
  int64 master_login_bonus_id = 2;
  google.protobuf.Timestamp received_at = 3;
}
